ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: service-auth-provider-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-auth-provider-api
                port:
                  number: 80
    - host: ccd-user-profile-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ccd-user-profile-api
                port:
                  number: 80
    - host: shared-db
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shared-db
                port:
                  number: 5432
    - host: idam-web-public
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idam-web-public
                port:
                  number: 80
    - host: fr-am
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fr-am
                port:
                  number: 8080
    - host: fr-idm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fr-idm
                port:
                  number: 18080
    - host: sidam-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sidam-api
                port:
                  number: 80
    - host: sidam-simulator
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sidam-simulator
                port:
                  number: 80
    - host: ccd-definition-store-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ccd-definition-store-api
                port:
                  number: 80
    - host: idam-web-admin
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idam-web-admin
                port:
                  number: 80
    - host: idam-web-public
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idam-web-public
                port:
                  number: 80
    - host: ccd-definition-store-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ccd-definition-store-api
                port:
                  number: 80
    - host: ccd-data-store-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ccd-data-store-api
                port:
                  number: 80
    - host: ccd-api-gateway
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ccd-api-gateway
                port:
                  number: 80
    - host: ccd-case-management-web
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ccd-case-management-web
                port:
                  number: 80
    - host: wiremock
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiremock
                port:
                  number: 80
    - host: xui-webapp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xui-webapp
                port:
                  number: 80
    - host: camunda-local-bpm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-local-bpm
                port:
                  number: 80
    - host: am-role-assignment
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: am-role-assignment
                port:
                  number: 80
    - host: ccd-message-publisher
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ccd-message-publisher
                port:
                  number: 80
    - host: ccd-case-document-am-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ccd-case-document-am-api
                port:
                  number: 80
